<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_main_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2">

        <Button
            android:id="@+id/bt_player_record"
            android:background="@drawable/bt_main_menu"
            android:backgroundTint="@color/player_record"
            android:textColor="@color/user_record"
            android:layout_width="720px"
            android:layout_height="200px"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/playerRecordButton"
            app:layout_constraintBottom_toTopOf="@+id/bt_join_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bt_join_game"
            android:background="@drawable/bt_main_menu"
            android:backgroundTint="@color/lottery"
            android:layout_width="720px"
            android:layout_height="200px"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/joinGame"
            app:layout_constraintBottom_toTopOf="@+id/bt_live_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_player_record" />

        <Button
            android:id="@+id/bt_live_game"
            android:background="@drawable/bt_main_menu"
            android:backgroundTint="@color/live_game"
            android:layout_width="720px"
            android:layout_height="200px"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/liveGame"
            app:layout_constraintBottom_toTopOf="@id/bt_lottery_record"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_join_game" />

        <Button
            android:id="@+id/bt_lottery_record"
            android:background="@drawable/bt_main_menu"
            android:backgroundTint="@color/user_record"
            android:layout_width="720px"
            android:layout_height="200px"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/lotteryRecord"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_live_game" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo_image"
        app:layout_constraintBottom_toTopOf="@+id/cl_main_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_org_h" />
</androidx.constraintlayout.widget.ConstraintLayout>